# biomcp

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
src/biomcp/: __init__.py  __main__.py  auth.py  observability.py  server.py  session_watch.py
src/biomcp/core/: __init__.py  entity_resolver.py  knowledge_graph.py  plan_registry.yaml  query_planner.py
src/biomcp/tools/: __init__.py  advanced.py  databases.py  innovations.py  ncbi.py  pathways.py  proteins.py  protocol_generator.py  strategy_surface.py  verify.py
src/biomcp/utils/: __init__.py
tests/: conftest.py  test_advanced.py  test_auth.py  test_biomcp.py  test_innovations.py  test_knowledge_graph.py  test_observability.py  test_pathways.py  test_proteins.py  test_query_planner.py  test_server.py  test_strategy_surface.py  test_utils.py  test_verify.py
