[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/biomcp/core/plan_registry.yaml",
]

[project]
name = "biomcp"
version = "2.3.0"
description = "Heuris-BioMCP — strategic MCP server for bioinformatics, translational research, structure prediction, CRISPR, variant interpretation, and clinical workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "BioMCP Contributors", email = "biomcp@users.noreply.github.com" }
]
keywords = [
    "mcp", "bioinformatics", "claude", "anthropic", "genomics", "proteomics",
    "drug-discovery", "alphafold", "ncbi", "pubmed", "uniprot", "kegg",
    "single-cell", "rna-seq", "multi-omics", "crispr", "variant-interpretation",
    "model-context-protocol", "boltz2", "evo2", "nvidia-nim"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "biopython>=1.83",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "aiofiles>=23.2.1",
    "cachetools>=5.3.3",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "xmltodict>=0.13.0",
    "anyio>=4.3.0",
    "orjson>=3.10.0",
    "PyYAML>=6.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
neuroimaging = [
    "nibabel>=5.2.0",
    "nilearn>=0.10.3",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-cachetools>=5.3.0",
    "respx>=0.21.0",
]

[project.scripts]
biomcp = "biomcp.server:main"

[project.urls]
Homepage      = "https://github.com/SachinGawande2003/Heuris-BioMCP"
Documentation = "https://github.com/SachinGawande2003/Heuris-BioMCP#readme"
Repository    = "https://github.com/SachinGawande2003/Heuris-BioMCP"
"Bug Tracker" = "https://github.com/SachinGawande2003/Heuris-BioMCP/issues"
Changelog     = "https://github.com/SachinGawande2003/Heuris-BioMCP/releases"
Security      = "https://github.com/SachinGawande2003/Heuris-BioMCP/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/biomcp"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
timeout      = 30
markers      = [
    "integration: marks tests that require live network access",
    "slow: marks slow tests",
]

[tool.coverage.run]
source = ["src/biomcp"]
omit   = ["tests/*", "**/__init__.py"]
